fix alignment on larger screens

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ Landing Page
   line-height: 30px;
   font-family: 'Quicksand', sans-serif;
   font-size: 18px;
-  margin-right: 35px;
+  margin-right: 77px;
  }
 
 .img-div:hover .caption {
@@ -205,13 +205,20 @@ Work
 }
 
 .portfolio-header {
-  margin-bottom: -30px;
+  margin: 5px 0 -40px 0;
 }
 
 .work-container {
   display: flex;
   justify-content: space-around;
-  margin-top: 50px;
+}
+
+.work-bottom-row {
+  margin-top: 130px;
+}
+
+.work-top-row {
+  margin-top: 90px;
 }
 
 .work-links {
@@ -235,6 +242,13 @@ Work
 .portfolio {
  margin-top: 150px;
  margin-bottom: 300px;
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+}
+
+.portfolio-container {
+  margin-right: 120px;
 }
 
 .work-caption {
@@ -271,7 +285,7 @@ Work
 }
 
 .next-contact:not(*:root) {
-  margin-top: -400px;
+  margin-top: -385px;
 }
 
 /*================================
